* area_for() now also returns the area ID for kernel areas if they are   accessible to the userland - this fixes #2405 (ie. MediaPlayer overlay now   works).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32135 a95241bf-73f2-0310-859d-f6bbb57e9c96